# gnome-hexgl

./: .gitignore  COPYING  meson.build  org.gnome.HexGL.appdata.xml  org.gnome.HexGL.desktop  org.gnome.HexGL.json  org.gnome.Hexgl.json  wrapper.sh.in
models/ships/feisar/: feisar.blend  feisar.glb  feisar.gltf
src/: analysismap.c  analysismap.h  camerachase.c  camerachase.h  gameplay.c  gameplay.h  hexgl.c  hud.c  hud.h  particles.c  particles.h  shaders.c  shaders.h  shipcontrols.c  shipcontrols.h  shipeffects.c  shipeffects.h  sounds.c  sounds.h  utils.c  utils.h
subprojects/: gthree.wrap
